--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,9 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <script>
+        let city_api_key = '<%= city_api_key %>';
+        let weather_api_key = '<%= weather_api_key %>';
+    </script>
+    <script defer src="js/countries.js"></script>
+    <script defer src="js/script.js"></script>
+    <title>Weather App</title>
 </head>
-<body>
-    
-</body>
+    <body>
+
+        <div class="loader" id="loader"></div>
+
+        <div class="card" id="card">
+            <div class="search">
+                <input  id="city-search-box" type="text" list="cities" placeholder="e.g. London, England" >
+                <datalist id="cities"></datalist>
+                <button><img id="search-button" src="images/search.png" alt="search-btn"></button>
+            </div>
+            <div class="weather">
+                <div class="main-weather">
+                    <img id="weather-img" src="" alt="weather-icon" class="weather-icon">
+                    <h1 id="temp" class="temp"></h1>
+                    <h2 id="city" class="city"></h2>
+                </div>
+                <div class="details">
+                    <div class="col">
+                        <img src="images/humidity.png" alt="humidity">
+                        <div>
+                            <p id="humidity" class="humidity"></p>
+                            <p>Humidity</p>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <img src="images/wind.png" alt="wind">
+                        <div>
+                            <p id="wind" class="wind"></p>
+                            <p>Wind Speed</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
