--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,21 +4,26 @@ h1, h2, h3, h4, h5, h6,
 form, label, input, button,
 p, a, img, ul, ol, li, blockquote,
 article, aside, footer, header, section {
-    border: 0;
-    margin: 0;
-    padding: 0;
     font: inherit;
     font-size: 100%;
     vertical-align: baseline;
 }
 
 body {
+    background: rgb(132,145,255);
+    background: linear-gradient(149deg, rgba(132,145,255,1) 19%, rgba(34,255,252,1) 48%, rgba(255,143,232,1) 84%);
+    height: 100%;
+    margin: 0;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     line-height: 1;
     font-family: Arial, sans-serif;
     color: #FFFFFF;
     display: flex;
     justify-content: center;
     align-items: center;
+    max-height: 100vh;
+    overflow: scroll;
 }
 
 ul, ol {
@@ -40,16 +45,17 @@ button {
     background: -moz-linear-gradient(90deg, hsla(216, 96%, 56%, 1) 0%, hsla(178, 64%, 65%, 1) 100%);
     background: -webkit-linear-gradient(90deg, hsla(216, 96%, 56%, 1) 0%, hsla(178, 64%, 65%, 1) 100%);
     filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#2278FB", endColorstr="#6BDFDB", GradientType=1 );
-    width: 490px;
-    height: auto;
-    margin: 10em 5em;
+    width: 40%;
+    height: 70%;
+    margin: 5em 5em;
     border-radius: 20px; 
     display: none;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 2em 0;
-    box-shadow: 6px 6px 5px lightblue;
+    padding: 2em 2em;
+    box-shadow: 6px 6px 8px rgba(79, 99, 105, 0.4);
+    position: relative;
 }
 
 .search {
@@ -58,6 +64,7 @@ button {
 }
 
 .search input {
+    width: 70%;
     height: 2em;
     border-radius: 1em;
     padding: 0 1em;
@@ -76,7 +83,13 @@ button {
 }
 
 .weather {
+    width: 80%;
+    margin-top: 1.25em;
+}
+
+.weather img {
     width: 60%;
+    height: auto;
 }
 
 .main-weather {
@@ -97,10 +110,11 @@ button {
 .col {
     display: flex;
     align-items: center;
+    font-size: 1.25em;
 }
 
 .col img {
-    width: 2.5em;
+    width: 4em;
     margin-right: 0.5em;
 }
 
@@ -123,3 +137,39 @@ button {
     0% { transform: translate(-50%, -50%) rotate(0deg); }
     100% { transform: translate(-50%, -50%) rotate(360deg); }
 }
+
+
+@media (max-width: 660px) {
+    .card {
+        height: 100vh;
+        width: 100vw;
+        margin: 0;
+        border-radius: 0;
+    }
+
+    .main-weather {
+        margin-bottom: 0;
+    }
+
+    .search {
+        margin-top: 4em;
+        width: 100%;
+    }
+
+    .search input {
+        width: 90%;
+    }
+
+    .details {
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        margin-top: 0;
+        margin-bottom: 3em;
+    }
+
+    .details > .col {
+        margin-bottom: 2em;
+    }
+}
+  
