gave the button element the id of search-button so when it's clicked it can execute the javascript

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
             <div class="search">
                 <input  id="city-search-box" type="text" list="cities" placeholder="e.g. London, England" >
                 <datalist id="cities"></datalist>
-                <button><img id="search-button" src="images/search.png" alt="search-btn"></button>
+                <button id="search-button"><img src="images/search.png" alt="search-btn"></button>
             </div>
             <div class="weather">
                 <div class="main-weather">
