made a drop down for suggested cities

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
         <div class="card" id="card">
             <div class="search">
                 <input  id="city-search-box" type="text" list="cities" placeholder="e.g. London, England" >
-                <datalist id="cities"></datalist>
+                <div id="cities"></div>
                 <button id="search-button"><img src="images/search.png" alt="search-btn"></button>
             </div>
             <div class="weather">
