--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -82,6 +82,40 @@ button {
     height: auto;
 }
 
+#cities {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    color: black;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    overflow-x: hidden;
+    margin-top: 11em;
+    margin-left: 0.75em;
+    height: 20%;
+    width: 30%;
+    border-radius: 0 0 20px 20px;
+    scrollbar-width: none;
+}
+
+.element::-webkit-scrollbar {
+    display: none; /* Hides the scrollbar */
+  }
+
+#cities div {
+    padding: 12px 16px;
+    cursor: pointer;
+}
+
+#cities div:hover {
+    background-color: #f1f1f1;
+}
+
+.input-active + #cities {
+    display: block;
+}
+
 .weather {
     width: 80%;
     margin-top: 1.25em;
